--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Your E-Portfolio"
+title: "Adelyn Chapman"
 image: images/MGEM_logo.png
 about:
   template: trestles
@@ -8,17 +8,16 @@ about:
     - icon: linkedin
       text: LinkedIn
       href: https://www.linkedin.com/in/ramon-melser-666932129/
-    - icon: twitter
-      text: Twitter/X
-      href: https://x.com/MelserRamon
     - icon: github
       text: GitHub
-      href: https://github.com/ramonmelser
+      href: https://github.com/adelynchapman
     - icon: envelope-at
       text: Email
-      href: mailto:melser@student.ubc.ca
+      href: mailto:arhchapman@gmail.com
 ---
 
 Hey there,
 
 This is your E-Portfolio landing page. Be sure to upload a professional headshot of yourself, and provide the appropriate links to your professional social media (linkedin, X/Twitter, etc). This is also a good place to provide a short summary of your education, career and interests. If you are associated with a lab or working with a research supervisor, it may be appropriate to provide some information on that here, along with links to relevant websites. 
+
+Hi, this is Addy! Welcome to my landing page!
