--- a/index.qmd
+++ b/index.qmd
@@ -16,8 +16,4 @@ about:
       href: mailto:arhchapman@gmail.com
 ---
 
-Hey there,
-
-This is your E-Portfolio landing page. Be sure to upload a professional headshot of yourself, and provide the appropriate links to your professional social media (linkedin, X/Twitter, etc). This is also a good place to provide a short summary of your education, career and interests. If you are associated with a lab or working with a research supervisor, it may be appropriate to provide some information on that here, along with links to relevant websites. 
-
-Hi, this is Addy! Welcome to my landing page!
+Hi, this is Addy! Welcome to my E-Portfolio landing page! I am an environmental professional located Canada with a career goal of protecting, restoring, and reclaiming the natural world. I graduated with a Master's of Geomatics for Environmental Management from the University of British Columbia in 2025 and a B.Sc. in Environmental Science from the University of Lethbridge in 2020. I have previously worked for Indigenous governments and not-for-profits to advance my career goals. In my free time, I enjoy camping, hiking, kayaking, and playing games.
