--- a/index.qmd
+++ b/index.qmd
@@ -16,4 +16,4 @@ about:
       href: mailto:arhchapman@gmail.com
 ---
 
-Hi, this is Addy! Welcome to my E-Portfolio landing page! I am an environmental professional located Canada with a career goal of protecting, restoring, and reclaiming the natural world. I graduated with a Master's of Geomatics for Environmental Management from the University of British Columbia in 2025 and a B.Sc. in Environmental Science from the University of Lethbridge in 2020. I have previously worked for Indigenous governments and not-for-profits to advance my career goals. In my free time, I enjoy camping, hiking, kayaking, and playing games.
+Hi, this is Addy! Welcome to my E-Portfolio landing page! I am an environmental professional located Canada with a career goal of protecting, restoring, and reclaiming the natural world. I graduated with a Master's of Geomatics for Environmental Management from the University of British Columbia in 2025 and a B.Sc. in Environmental Science from the University of Lethbridge in 2020. I have previously worked for Indigenous governments and not-for-profits to advance my career goals. In my free time, I enjoy camping, hiking, kayaking, and climbing.
