--- a/resume.qmd
+++ b/resume.qmd
@@ -22,9 +22,7 @@ B.Sc. Environmental Science Minor in Small Business Management
 
 # Experience
 
-***2022-2023***
-
-**Te'mexw Treaty Association** Victoria, BC
+**2022-2023** *Te'mexw Treaty Association*
 
 Project Coordinator
 
@@ -32,9 +30,7 @@ Project Coordinator
 -   Diligently recorded treaty proceedings and provided succinct post-meeting summaries
 -   Catalogued historical documents into Sohodocs database
 
-***2021-2022***
-
-**Northern Environmental Action Team** Fort St. John, BC
+**2021-2022** *Northern Environmental Action Team*
 
 Northern Co-Hort & Food Hub Research and Development
 
@@ -43,9 +39,7 @@ Northern Co-Hort & Food Hub Research and Development
 -   Identified and fulfilled diverse needs of Co-Hort producer members via regular communications, facilitating student-producer relationships, and client presentations
 -   Piloted Food Hub program through dinner boxes and aggregated farm products for sale at local markets on behalf of producers and tracked sales data through Microsoft Excel
 
-*2021*
-
-**Northern Environmental Action Team** Fort St. John, BC
+**2021** *Northern Environmental Action Team*
 
 Northern Co-Hort Eco Farm Skills Coordinator
 
@@ -54,9 +48,7 @@ Northern Co-Hort Eco Farm Skills Coordinator
 -   Organized weekly markets and events, including training, product intake and storage, collecting regulatory licenses, invoicing, etc.
 -   Independently updated existing orientation materials and management toolsets to facilitate training sessions Communicated expertise of sustainable agriculture practices to community
 
-*2021*
-
-**Fort St. John Association for Community Living** Fort St. John, BC
+**2021** *Fort St. John Association for Community Living*
 
 Growing Conections Farm Coordinator
 
@@ -64,9 +56,7 @@ Growing Conections Farm Coordinator
 -   Taught farm clients ecological farm techniques and practices, including soil health, sheet mulch and hugelkultur beds, and sheep care
 -   Performed strenuous physical activities including lifting, digging, mulching, and planting during various weather conditions
 
-*2019-2020*
-
-**Interfaith Food Bank** Lethbridge, AB
+**2019-2020** *Interfaith Food Bank*
 
 Food Recovery Program Research and Development
 
@@ -74,9 +64,7 @@ Food Recovery Program Research and Development
 -   Implemented new program independently while facilitating volunteers
 -   Formulated strategy for affordable market concept for transformed product
 
-*2017*
-
-**AAFC Lethbridge Research and Development Center** Lethbridge, AB
+**2017** *AAFC Lethbridge Research and Development Center*
 
 Research Assistant
 
