--- a/content.qmd
+++ b/content.qmd
@@ -4,11 +4,15 @@ format: html
 editor: visual
 ---
 
-# Project 1 - Capstone Deliverables
+# *Comparison of Multi-Source Remote Sensing Estimations of Aboveground Biomass of Tropical Rainforests in Kwahu South, Ghana*
 
-This is a sample page where you can archive project deliverables. Every header you use will correspond to a tab in the legend - shown on the right-hand side of your screen ("On this page").
+## Summary
 
-If you've produced any GIS layers for your 599 project, this may be a good place to share them as interactive maps through leaflet. Alternatively, you can upload high-res figures showing correlations, box-plots, etc. from your report here, and provide a brief overview of key project results. If you have written some useful functions, you may also want to share those here to demonstrate proficiency in particular coding languages or synergies between notable coding packages.
+This study investigated the extent to which different methods of remote sensing were able to estimate the aboveground biomass in a tropical forest reserve in Kwahu South, Ghana. By utilizing multiple sources of space-borne optical imagery from Landsat-8 and Sentinel-2 in combination with the LiDAR systems on the GEDI module of the ISS, a random forest machine learning algorithm was used to predict the aboveground biomass of the reserve. The accuracy of the prediction was compared to a dataset from Chloris geospatial, which is also validated on drone-based LiDAR datasets.
+
+image: images/agbmodel1&2
+
+# *Project 2*
 
 ## Leaflet
 
@@ -17,10 +21,48 @@ Sample leaflet - for detailed leaflet instructions, visit the FCOR 599 workshop 
 ```{r leaflet, include = FALSE}
 library(dplyr); library(leaflet)
 
-m <- leaflet() %>%
-  addProviderTiles("Esri.WorldImagery") %>%
-  addScaleBar(position = c("bottomleft")) %>%
-  setView(-123.1207, 49.2827, zoom = 11)
+m <- leaflet(width = 600, height = 600)%>%
+  
+  #set up the two map panes
+  addMapPane("right", zIndex = 1) %>%
+  addMapPane("left",  zIndex = 2) %>%
+  
+  #add the ESRI basemap to both map panes
+  addProviderTiles("Esri.WorldImagery", group = "base", layerId = "baseid1", options = pathOptions(pane = "right")) %>%
+  addProviderTiles("Esri.WorldImagery", group = "base", layerId = "baseid2", options = pathOptions(pane = "left")) %>%
+  
+  #now lets add our NTEMS land cover from 2000
+  addRasterImage(ntems2000, 
+                 #you can increase the allowable size of the rast here
+                 maxBytes = 10 * 1024 *1024,
+                 #provide a name for the layer
+                 group = "LC-2000",
+                 #assign to a pane
+                 options = leafletOptions(pane = "left")) %>%
+  
+  #now lets add our NTEMS land cover from 2020
+  addRasterImage(ntems2020, 
+                 #you can increase the allowable size of the rast here
+                 maxBytes = 10 * 1024 *1024,
+                 #provide a name for the layer
+                 group = "LC-2020",
+                 #assign to a pane
+                 options = leafletOptions(pane = "right")) %>%
+  
+  #allow for layers to be toggles on/off by adding them to the layers control
+  addLayersControl(overlayGroups = c("LC-2000", "LC-2020")) %>%
+  
+  #add slider control
+  addSidebyside(layerId = "sidecontrols",
+                rightId = "baseid1",
+                leftId  = "baseid2",
+                options = list(padding = 0)) %>%
+  
+  #add a legend
+  addRasterLegend(ntems2000, opacity = 1)%>%
+  
+  #add scale bar
+  addScaleBar(position = c("bottomleft"))
 
 ```
 
